<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mbaas.com.nifcloud.androidsegmentpushapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="Current Installation"
                    android:textColor="#411c1c"
                    android:textSize="30dp" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_column="1"
                            android:layout_below="@+id/textView2"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_marginTop="42dp"
                            android:text="ObjectId"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/txtObject"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:layout_below="@+id/textView2"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_marginTop="42dp"
                            android:text="ObjectId"
                            android:textSize="20dp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_column="1"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="appVersion"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/txtAppversion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="appVersion"
                            android:textSize="20dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_column="1"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="channels"
                            android:textSize="25dp" />

                        <Spinner
                            android:id="@+id/spinChannel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:entries="@array/list" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_column="1"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="deviceToken"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/txtDevicetoken"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="deviceToken"
                            android:textSize="20dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_column="1"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="sdkVersion"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/txtSdkversion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="sdkVersion"
                            android:textSize="20dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_column="1"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="timeZone"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/txtTimezone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="timeZone"
                            android:textSize="20dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_column="1"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="createDate"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/txtCreatedate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="createDate"
                            android:textSize="20dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_column="1"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="updateDate"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/txtUpdatedate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="updateDate"
                            android:textSize="20dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_column="1"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:text="Prefectures"
                            android:textSize="25dp" />

                        <EditText
                            android:id="@+id/txtPrefecture"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btnSave"
                            android:layout_column="1"
                            android:width="20dp"
                            android:gravity="center_horizontal|top"
                            android:text="SAVE"
                            android:textAlignment="center" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
